--- a/src/app/pages/reactive/reactive.component.html
+++ b/src/app/pages/reactive/reactive.component.html
@@ -81,7 +81,7 @@
   </div>
 
   <div class="form-group row">
-    <label class="col-2 col-form-label">Repita</label>
+    <label class="col-2 col-form-label">Confirma Contraseña</label>
     <div class="col">
 
       <input class="form-control"
