cambio de titulo
modifique el titulo de un campo

--- a/src/app/pages/reactive/reactive.component.html
+++ b/src/app/pages/reactive/reactive.component.html
@@ -96,7 +96,7 @@
 
 
   <div class="form-group row" formGroupName="direccion">
-    <label class="col-2 col-form-label">Direccion</label>
+    <label class="col-2 col-form-label">Direccion o Ubicacion</label>
     <div class="form-row col">
 
         <div class="col">
